--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,14 @@
 /.zed
 /auth.json
 /node_modules
-/public/build
 /public/hot
-/public/storage
 /storage/*.key
 /storage/pail
 /vendor
 Homestead.json
 Homestead.yaml
 Thumbs.db
+
+!/public/storage/products/
+!/public/build/assets/
+!/storage/app/public/products/
